tests/diagnostics/snapshots/test_help.txt
Error: Can't compare apples with oranges (at <unknown>:1:6)
  | 
1 | apple == orange
  |       ^^ Comparison attempted here

Help: Have you tried peeling the orange?